--- a/frontend/src/app/components/header/header.html
+++ b/frontend/src/app/components/header/header.html
@@ -1,3 +1,15 @@
-<div class="h-20 bg-primary-500">
-    <h1>{{ name }}</h1>
+<div class="bg-primary-950 flex items-center p-2 h-[var(--header-height)]">
+    <div class="ml-4 p-2 text-3xl text-white grid grid-cols-2 gap-4">
+        <!-- TO-DO: change this hardcoded value (white) -->
+        <div class="">
+            <h1>
+                {{ name }}  
+            </h1>
+        </div>
+        <div>
+            <small *ngIf="year" class="text-sm">
+                {{ `${year}. letnik` || '' }}
+            </small>
+        </div>
+    </div>
 </div>
