--- a/frontend/src/app/components/overview/overview.html
+++ b/frontend/src/app/components/overview/overview.html
@@ -1,2 +1,40 @@
 <app-header [name]="'OVERVIEW'"></app-header>
-<p>overview works!</p>
+<app-content-wrapper>
+     <p-table sortMode="multiple" stripedRows [value]="students" [tableStyle]="{ 'min-width': '60rem'}">
+        <ng-template #header>
+            <tr>
+                <th pSortableColumn="name" style="width:20%">
+                    <div class="flex items-center gap-2">
+                        Name
+                        <p-sortIcon field="name" />
+                    </div>
+                </th>
+                <th pSortableColumn="year" style="width:20%">
+                    <div class="flex items-center gap-2">
+                        Year
+                        <p-sortIcon field="year" />
+                    </div>
+                </th>
+                <th pSortableColumn="num_of_subjects" style="width:20%">
+                    <div class="flex items-center gap-2">
+                        Number of Subjects
+                        <p-sortIcon field="num_of_subjects" />
+                    </div>
+                </th>
+            </tr>
+        </ng-template>
+        <ng-template #body let-rowData>
+            <tr>
+                <td routerLink="/student/{{ rowData.id }}">
+                    {{ rowData.name }}
+                </td>
+                <td>
+                    {{ rowData.year }}
+                </td>
+                <td>
+                    {{ rowData.subjects.length }}
+                </td>
+            </tr>
+        </ng-template>
+    </p-table>
+</app-content-wrapper>
