--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,3 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import "tailwindcss";
 @plugin "tailwindcss-primeui";
+
+:root {
+  --header-height: 4rem;
+}
