--- a/frontend/src/app/components/student/student.html
+++ b/frontend/src/app/components/student/student.html
@@ -1,7 +1,7 @@
 <app-header [name]="student.name" [year]="student.year"></app-header>
 <app-content-wrapper>
 
-    <p-table sortMode="multiple" stripedRows [columns]="cols" [value]="subjects" [tableStyle]="{ 'min-width': '60rem'}">
+    <p-table [hidden]="!studentSubjects.length" sortMode="multiple" stripedRows [columns]="cols" [value]="studentSubjects" [tableStyle]="{ 'min-width': '60rem'}">
         <ng-template #header>
             <tr>
                 <th pSortableColumn="id" style="width:20%">
@@ -30,7 +30,7 @@
                 </th>
             </tr>
         </ng-template>
-        <ng-template #body let-rowData>
+        <ng-template  #body let-rowData>
             <tr>
                 <td>
                     {{ rowData.id }}
@@ -47,5 +47,59 @@
             </tr>
         </ng-template>
     </p-table>
+
+    <p-button (click)="showDialog()" label="Edit Student" />
+
+    <p-dialog header="Edit student" [modal]="true" [(visible)]="visible" [style]="{ width: '25rem' }">
+        <span class="p-text-secondary block mb-8">Provide information for creating a new student.</span>
+        <div class="flex items-center flex-col gap-4 mb-4">
+            <p-floatlabel variant="on" class="w-full">
+                <label for="name" class="font-semibold">Name and Surname</label>
+                <input pInputText 
+                    id="name" 
+                    class="flex-auto w-full" 
+                    autocomplete="off"
+                    [(ngModel)]="student.name"
+                    aria-describedby="username-help"
+                    disabled="true"
+                />
+            </p-floatlabel>
+            <!-- <small id="username-help" class="text-red-600">Enter your username to reset your password.</small> -->
+        </div>
+        <div class="flex items-center gap-4 mb-8">
+            <p-floatlabel variant="on" class="w-full">
+                <label for="year" class="font-semibold z-10">Year</label>
+                <p-inputnumber
+                    inputId="year" 
+                    class="flex-auto w-full" 
+                    autocomplete="off"
+                    [(ngModel)]="student.year"
+                    disabled="true"
+                />
+            </p-floatlabel>
+        </div>
+
+        <div class="card flex justify-center mb-4">
+            <p-floatlabel variant="on" class="w-full">
+                <label for="subjects" class="font-semibold z-10">Subjects</label>
+                <p-multiselect 
+                    [options]="subjects" 
+                    [(ngModel)]="studentSubjectIds" 
+                    optionLabel="label" optionValue="value" 
+                    [maxSelectedLabels]="3" 
+                    display="chip"
+                    appendTo="body"
+                    class="w-full" 
+                />
+            </p-floatlabel>
+
+        </div>
+
+        <div class="flex justify-end gap-2">
+            <p-button label="Cancel" severity="secondary" (click)="hideDialog()" />
+            <p-button label="Save" (click)="editStudent()" />
+        </div>
+    </p-dialog>
+
 
 </app-content-wrapper>
