--- a/frontend/src/app/components/overview/overview.html
+++ b/frontend/src/app/components/overview/overview.html
@@ -29,6 +29,19 @@
         </ng-template>
     </p-table>
 
+
+    <div class="card flex justify-space-between">
+        <p-paginator 
+            (onPageChange)="onPageChange($event)" 
+            [first]="first" [rows]="rows" 
+            [totalRecords]="totalRecords" 
+            [rowsPerPageOptions]="[20, 50]"
+            [showCurrentPageReport]="true"
+            currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+            class="w-full my-2 flex justify-space-between"
+        />
+    </div>
+
     <p-button (click)="showDialog()" label="Add Student" />
     <p-dialog header="Add a student" [modal]="true" [(visible)]="visible" [style]="{ width: '25rem' }">
         <span class="p-text-secondary block mb-8">Provide information for creating a new student.</span>
