--- a/frontend/src/app/components/student/student.html
+++ b/frontend/src/app/components/student/student.html
@@ -47,8 +47,9 @@
             </tr>
         </ng-template>
     </p-table>
-
-    <p-button (click)="showDialog()" label="Edit Student" />
+    <div class="flex mt-4 justify-center">
+        <p-button (click)="showDialog()" label="Edit Student" />
+    </div>
 
     <p-dialog header="Edit student" [modal]="true" [(visible)]="visible" [style]="{ width: '25rem' }">
         <span class="p-text-secondary block mb-8">Provide information for creating a new student.</span>
