--- a/frontend/src/app/components/overview/overview.css
+++ b/frontend/src/app/components/overview/overview.css
@@ -24,12 +24,28 @@
   border-spacing: 0 1em;
 }
 
-
-:host ::ng-deep .p-datatable-tbody > tr > td {
+:host ::ng-deep .p-datatable-thead > tr >th:first-child {
   border: none;
+  border-radius: 4px 0px 0px 4px;
 }
 
-:host ::ng-deep .p-datatable-tbody > tr {
+:host ::ng-deep .p-datatable-thead > tr >th:last-child {
+  border: none;
+  border-radius: 0px 4px 4px 0px;
+}
+
+
+:host ::ng-deep .p-datatable-tbody > tr >td:first-child {
+  border: none;
+  border-radius: 4px 0px 0px 4px;
+}
+
+:host ::ng-deep .p-datatable-tbody > tr >td:last-child {
+  border: none;
+  border-radius: 0px 4px 4px 0px;
+}
+
+/* :host ::ng-deep .p-datatable-tbody > tr {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     border-radius: 4px;
 } */
