--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -3,5 +3,105 @@
 @plugin "tailwindcss-primeui";
 
 :root {
-  --header-height: 4rem;
+  --header-height: 6rem;
+
+  --p-datatable-striped-row-bg: #000000;
+  --p-datatable-striped-row-hover-bg: #000000;
+
+  .p-datatable-thead > tr > th {
+    background-color: var(--p-primary-600);  
+    color: white;
+    font-weight: bold;
+  }
+
+  .p-datatable-sort-icon {
+    color: white;
+  }
+
+  .p-datatable-thead > tr > th:hover {
+    background-color: var(--p-primary-500);  
+    color: white;
+    font-weight: bold;
+  }
+
+  .p-datatable-thead > tr:hover .p-datatable-sort-icon { 
+    color: white;
+  }
+
+
+  .p-datatable-table {
+    border-collapse: separate;
+    border-spacing: 0 0.7em;
+    padding: 1em;
+  }
+
+
+  /* .p-datatable-thead {
+    border-radius: 4px !important;
+    background-color: aquamarine;
+  } */
+
+  .p-datatable-thead > tr > th {
+    border: none;
+  }
+
+  .p-datatable-thead > tr > th:first-child {
+    border-radius: 3px 0px 0px 3px;
+  }
+
+  .p-datatable-thead > tr > th:last-child {
+    border-radius: 0px 3px 3px 0px;
+  }
+
+  tr {
+    box-shadow: 0px 0px 2px 0px #bbbbbb;
+    padding: 2em;
+  }
+
+
+  .p-datatable-tbody > tr > td {
+    border: none;
+    padding: 1em;
+  }
+
+  .p-datatable-tbody > tr > td:first-child {
+    border-radius: 3px 0px 0px 3px;
+  }
+
+  .p-datatable-tbody > tr > td:last-child {
+    border-radius: 0px 3px 3px 0px;;
+  }
+
+  .p-datatable-tbody > tr:nth-child(odd) > td {
+    background-color: var(--p-surface-100);
+  }
+
+  .p-paginator {
+    display: grid;
+    grid-template-columns: 1fr 3em 3em 5em 3em 3em 6em;
+    justify-content: space-between;
+  }
+
+  .p-paginator-current {
+    justify-self: flex-start;
+  } 
+
+  /* .p-paginator > button {
+    justify-self: flex-end;
+  } */
 }
+
+
+
+/* :host ::ng-deep .p-datatable-tbody > tr {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 4px;
+} */
+
+
+
+
+
+
+
+
