--- a/frontend/src/app/components/content-wrapper/content-wrapper.html
+++ b/frontend/src/app/components/content-wrapper/content-wrapper.html
@@ -1,3 +1,3 @@
-<div class="p-[2em] bg-surface-200 min-h-[calc(100vh-var(--header-height))]">
+<div class="bg-surface-200 min-h-[calc(100vh-var(--header-height))]">
     <ng-content></ng-content>
 </div>
