--- a/frontend/src/app/components/overview/overview.html
+++ b/frontend/src/app/components/overview/overview.html
@@ -1,8 +1,14 @@
-<app-header [name]="'OVERVIEW'"></app-header>
+<app-header [name]="'Overview'"></app-header>
 <app-content-wrapper>
      <p-table sortMode="multiple" stripedRows [value]="students" [tableStyle]="{ 'min-width': '60rem'}">
         <ng-template #header>
             <tr>
+                <th pSortableColumn="surname" style="width:20%">
+                    <div class="flex items-center gap-2">
+                        Surname
+                        <p-sortIcon field="name" />
+                    </div>
+                </th>
                 <th pSortableColumn="name" style="width:20%">
                     <div class="flex items-center gap-2">
                         Name
@@ -20,10 +26,18 @@
         <ng-template #body let-rowData>
             <tr>
                 <td routerLink="/student/{{ rowData.id }}">
+                    {{ rowData.surname }}
+                </td>
+                <td routerLink="/student/{{ rowData.id }}">
                     {{ rowData.name }}
                 </td>
                 <td>
-                    {{ rowData.year }}
+                    <div class="flex justify-between items-center">
+                        <div>{{ rowData.year }}</div>
+                        <p-button (click)="deleteStudent(rowData.id)" >
+                            <span class="pi pi-trash"></span>
+                        </p-button>
+                    </div>
                 </td>
             </tr>
         </ng-template>
@@ -33,7 +47,8 @@
         <p-button (click)="showDialog()" label="Add Student" />
     </div>
 
-    <div class="h-16"></div>
+    <!-- Bottom spacer -->
+    <div class="h-20"></div>
 
     <div class="card flex fixed left-2 right-2 bottom-1 shadow-[#bbbbbb] shadow-sm rounded-sm">
         <p-paginator 
@@ -47,11 +62,25 @@
         />
     </div>
 
-    <p-dialog header="Add a student" [modal]="true" [(visible)]="visible" [style]="{ width: '25rem' }">
+    <p-dialog header="Add a student" [modal]="true" [(visible)]="dialogVisible" [style]="{ width: '25rem' }">
         <span class="p-text-secondary block mb-8">Provide information for creating a new student.</span>
+        
         <div class="flex items-center flex-col gap-4 mb-4">
             <p-floatlabel variant="on" class="w-full">
-                <label for="name" class="font-semibold">Name and Surname</label>
+                <label for="surname" class="font-semibold">Surname</label>
+                <input pInputText 
+                    id="surname" 
+                    class="flex-auto w-full" 
+                    autocomplete="off"
+                    [(ngModel)]="studentSurname"
+                    aria-describedby="userSurname-help"
+                />
+            </p-floatlabel>
+        </div>
+        
+        <div class="flex items-center flex-col gap-4 mb-4">
+            <p-floatlabel variant="on" class="w-full">
+                <label for="name" class="font-semibold">Name</label>
                 <input pInputText 
                     id="name" 
                     class="flex-auto w-full" 
@@ -60,8 +89,8 @@
                     aria-describedby="username-help"
                 />
             </p-floatlabel>
-            <!-- <small id="username-help" class="text-red-600">Enter your username to reset your password.</small> -->
         </div>
+
         <div class="flex items-center gap-4 mb-8">
             <p-floatlabel variant="on" class="w-full">
                 <label for="year" class="font-semibold z-10">Year</label>
@@ -87,7 +116,6 @@
                     class="w-full" 
                 />
             </p-floatlabel>
-
         </div>
 
         <div class="flex justify-end gap-2">
